--- a/src/prefstore/static/layout.css
+++ b/src/prefstore/static/layout.css
@@ -9,10 +9,6 @@ body {
 	margin: auto;
 }
 
-.bottom {
-	background-color: #eeeeff;
-}
-
 .header {
 	border-bottom:1px solid #dadada;
 	height: 90px;
@@ -104,6 +100,7 @@ body {
 .bottom {
 	min-height:220px;
 	margin-top: 50px;
+	background-color: #eeeeff;
 }
 
 
@@ -180,3 +177,52 @@ a:hover {
 	color:#ff5555;
 	font-size:11px
 }
+
+
+
+/**
+ * Styles for the Summary Page
+ **/
+
+
+.table_category {
+	border-bottom: 1px dotted #aaaaaa; 
+	margin-bottom:25px;
+	padding:5px;
+}
+
+.table_item {
+	height:32px;
+	display: block;
+	vertical-align: middle;
+}
+
+.table_field_name {
+	float:left;
+	font-size:16; 
+	font-weight:bold; 
+	color:#009cd2;
+}
+
+.table_field_value {
+	float:left;
+	font-size:13; 
+	font-weight:normal; 
+	color:#555555; 
+	padding: 2 4 4 10;
+	max-width:180px;
+}
+
+.table_image {
+	float:left;
+}
+
+.table_image img {
+	width:50px;
+}
+
+.table_content {
+	margin-left:75px
+}
+
+</style>
