clean base.html

--- a/django/dataware/template/base.html
+++ b/django/dataware/template/base.html
@@ -16,7 +16,7 @@
     Login as {{ user.username }} |
     <a href="{% url django.contrib.auth.views.logout %}?next=/">Logout</a>
     {% endif %} 
-    <div>
+    </div>
     {% block content %}{% endblock %}
   </body>
 </html>
