--- a/django/dataware/template/base.html
+++ b/django/dataware/template/base.html
@@ -4,6 +4,9 @@
     <title>Dataware Catalog</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <style>
+      body {
+      background-color: #DDDDDD;
+      }
     </style>
   </head>
   <body>
